added a type for the buy or remove filter and it is possible to choose several values for the number of rooms